docs/stage3-proof/02-app1-networkpolicy.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-only-same-namespace","namespace":"app1"},"spec":{"ingress":[{"from":[{"podSelector":{}}]}],"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-03-12T21:00:29Z"
    generation: 1
    name: allow-only-same-namespace
    namespace: app1
    resourceVersion: "9588"
    uid: 27261564-0a79-428e-9e3b-8e4d0d1a8d89
  spec:
    ingress:
    - from:
      - podSelector: {}
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
