docs/stage3-proof/03-app2-networkpolicy.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-only-same-namespace","namespace":"app2"},"spec":{"ingress":[{"from":[{"podSelector":{}}]}],"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-03-12T21:00:29Z"
    generation: 1
    name: allow-only-same-namespace
    namespace: app2
    resourceVersion: "9589"
    uid: 025c2b0f-a5ad-4191-b63e-e9fa413ca057
  spec:
    ingress:
    - from:
      - podSelector: {}
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
